k3s-deployment-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: runnable-run
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-mock-server-deployment
  namespace: runnable-run
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: demo-mock-server
  template:
    metadata:
      labels:
        app: demo-mock-server
    spec:
      containers:
        - name: demo-mock-server
          image: registry.cn-hongkong.aliyuncs.com/runnable-run/numfeel-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /chinese-names?n=1
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /chinese-names?n=1
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: demo-mock-server-service
  namespace: runnable-run
spec:
  selector:
    app: demo-mock-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-mock-server-ingress
  namespace: runnable-run
spec:
  rules:
    - host: numfeel-api.996.ninja
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-mock-server-service
                port:
                  number: 80
